# tideeda

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  pyproject.toml
crates/bitblast/: Cargo.toml
crates/bitblast/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: lib.rs
crates/pybindings/: Cargo.toml
crates/pybindings/src/: lib.rs
crates/uhdm-rs/: Cargo.toml  build.rs
crates/uhdm-rs/doc/: UHDM_API.md  spec.md
crates/uhdm-rs/reference/schema/: aliasstmt.rs  always.rs  any.rs  anypattern.rs  arrayexpr.rs  arraynet.rs  arraytypespec.rs  arrayvar.rs  assertstmt.rs  assignment.rs  assignstmt.rs  assume.rs  atomicstmt.rs  attribute.rs  begin.rs  bitselect.rs  bittypespec.rs  bitvar.rs  breakstmt.rs  bytetypespec.rs  bytevar.rs  caseitem.rs  caseproperty.rs  casepropertyitem.rs  casestmt.rs  chandletypespec.rs  chandlevar.rs  checkerdecl.rs  checkerinst.rs  (+206 more)
crates/uhdm-rs/schema/: uhdm.capnp
crates/uhdm-rs/scripts/: fix_schema_paths.py  generate_mod_rs.py  generate_mod_rs_from_files.py  split_uhdm_capnp.py  split_uhdm_capnp_fixed.py  split_uhdm_capnp_pure.py
crates/uhdm-rs/src/: lib.rs  raw_types.rs  regression_test.rs  uhdm_capnp.rs  walker.rs
tests/: complex_test.sv  test.sv
tests/examples/counter/: counter.uhdm
tests/examples/hierarchy/: elab_diff_summary.md  hierarchy_post_elab.uhdm  hierarchy_pre_elab.uhdm  post_elab_dump.txt  post_elab_full.txt  pre_elab_dump.txt  pre_elab_full.txt
tests/examples/ibex_csr/: ibex_csr.uhdm
(+3 files in other folders)
